--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+.ticket {
+  width: 650px;
+  height: 300px;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 30px;
+  position: relative;
+}
+
+h3 {
+  margin-bottom: 15px;
+}
+
+.dati-passeggero {
+  margin-bottom: 10px;
+}
+
+i {
+  margin-right: 5px;
+}
+
+.code {
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  font-size: 50px;
+}
+
+
+
+
 /* DEBUGG - start rules*/
 /* debug {}
   .debug .container {
